--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,3 +8,8 @@ tasks:
     command: |
       cd react-intro-examples/SimpleReactElement
       npm run start
+ports:
+  - port: 3000 # The development web-server, must be public in order to test your app in your browser
+    visibility: public
+  - port: 3306 # The DB port, this must be private
+    visibility: private
