--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,9 @@ tasks:
     command: |
       cd react-intro-examples/SimpleReactElement
       npm run start
+
+  - name: Show MySql DBs
+    command: mysql -e "show databases;"
 ports:
   - port: 3000 # The development web-server, must be public in order to test your app in your browser
     visibility: public
