--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,8 @@ tasks:
 
   - name: Show MySql DBs
     command: mysql -e "show databases;"
+image: # Specify the docker image to use in order to create the dev environment
+  file: .gitpod.dockerfile # This is a path to our image file
 ports:
   - port: 3000 # The development web-server, must be public in order to test your app in your browser
     visibility: public
