--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,5 +16,7 @@ image: # Specify the docker image to use in order to create the dev environment
 ports:
   - port: 3000 # The development web-server, must be public in order to test your app in your browser
     visibility: public
+    onOpen: open-preview
   - port: 3306 # The DB port, this must be private
     visibility: private
+    onOpen: ignore
