--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,7 @@ tasks:
 
   - name: Show MySql DBs
     init: >
+      gp await-port 3306 &&
       mysql -e "show databases;"
 
 image: # Specify the docker image to use in order to create the dev environment
