--- a/react-intro-examples/ImperativeVsDeclarative/package.json
+++ b/react-intro-examples/ImperativeVsDeclarative/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impoerativevsdeclarative",
+  "name": "imperativevsdeclarative",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
