--- a/react-intro-examples/HookAndEffect/package.json
+++ b/react-intro-examples/HookAndEffect/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "simpledotcss": "^1.0.1"
+    "react-scripts": "^4.0.3"
   },
   "browserslist": {
     "production": [
@@ -25,5 +24,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
